--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <title>DOCUMENT</title>
 </head>
 <body>
-<h1>test for text</h1>
+<h1 style="text-align:center;">Memorial Page for Ian S. Denhardt</h1>
+<img src="Headshot of Ian from Story - 2023.jpg" alt="Headshot of Ian" width="500" height="600" class="center">
+<h2 style="text-align:center;"> August 30, 1987 to July 7, 2023</h2>
 </body>
 </html>
