--- a/index.html
+++ b/index.html
@@ -1,12 +1,60 @@
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>DOCUMENT</title>
+	<style>
+	.center {
+	  display: block;
+	  margin-left: auto;
+	  margin-right: auto;
+	  width: 500;
+	}
+	.centertxt {
+	  display: block;
+	  margin-left: auto;
+	  margin-right: auto;
+	  width: 60%;
+	}
+	</style>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Memorial Page for Ian S. Denhardt</title>
 </head>
 <body>
-<h1 style="text-align:center;">Memorial Page for Ian S. Denhardt</h1>
-<img src="Headshot of Ian from Story - 2023.jpg" alt="Headshot of Ian" width="500" height="600" class="center">
-<h2 style="text-align:center;"> August 30, 1987 to July 7, 2023</h2>
+	<h1 style="text-align:center;">Memorial Page for Ian S. Denhardt</h1>
+
+	<img src="Headshot of Ian from Story - 2023.jpg" alt="Headshot of Ian" width="500" height="600" class="center">
+	<h2 style="text-align:center;"> August 30, 1987 to July 7, 2023</h2>
+	<div class="centertxt">
+		<h1 style="text-align:center;"> 
+		A service in celebration of the life of Ian S. Denhardt will be held in person
+		at the Winchester Unitarian Society, 478 Main St., Winchester, MA 01890 at 2 PM on Saturday, October 21, 2023.  
+		The service will be live streamed here. A recording should be available at the same url after the service.
+		</h1>
+		<h1 style="text-align:center;">
+			<a href="https://docs.google.com/forms/d/e/1FAIpQLScNzImyTypQHbhMvbB5qZb2UoWqV0V8k0SDmXhkUWeR8SlZzA/viewform?usp=sf_link">
+			If you are planning to attend in person please RSVP before 10/19 here.
+			</a>
+		</h1>
+		  
+		<h2 style="text-align:center;"> Ian S. Denhardt, the first child of Patricia Shepard, a clinical social worker and Ronald C. Denhardt, an energy consultant, was born and raised in Winchester MA. His education in the public schools, included an extra year at the kindergarten level and two years at Dearborn Academy in Arlington, from     2000-2002, where he earned an award for “outstanding achievement in academics and social skills.” At Winchester High School he received an award for outstanding scholarship in German and became a member of the National Honor Society before graduating in 2006. 
+		He finished a BA at Clark University in 2011, where he received an award for Outstanding Achievement in Computer Science. He spent one year in the PhD Program at BU but subsequently enjoyed work as a private tutor in computer science, including some volunteering in historically marginalized communities, continuing with paid work in a lab devoted to building an open source cloud, and working free-lance as a programmer. His love of open source software began at an early age and he continued to do what he could to support that community for many years, Some of his contributions are posted here:<br><br><br><br>
+
+		https://github.com/zenhack 	 		 	 https://github.com/sponsors/zenhack
+		Slow to take on physical activity as a child, Ian learned to play basketball in middle school and was able to play some on the Junior Varsity team in high school. He enjoyed jogging after that and ended up doing more biking than anything, when he discovered it was almost always faster than taking the T.      In 2015 he met Story Boyle at an annual summer festival and they became close, living in the same space for several years, in Brighton and then Malden, and becoming legal partners in late 2021. While Ian faced many challenging issues during his short life, the last several years were some of his best, and his last week was a good one. Ian was truly a beloved member of the community of friends that attended the same annual festival regularly. A communication to their community following the event included these words about him:
+		“...most loved spouse, Dear One, partner, metamour, best of friends,
+		and all around excellent example of how to be a good human,
+		is no longer with us. Words are inadequate to describe this loss.“
+		He died accidentally at the festival on 7/7/23. Ian’s passing was sudden and apparently almost painless. His green burial took place in a Pine Grove at the Spirit Sanctuary in Essex New York on Sunday, July 23, 2023 with the assistance of many beloved friends.
+		Ian S. Denhardt is survived by his spouse (Story Boyle), his mother (Patricia Shepard), his younger brother, (Shane T. Denhardt), and many aunts, uncles and cousins.
+		In lieu of flowers please consider making a donation to one or more of the following organizations or any organization of your choice:
+
+		ACLU (American Civil Liberties Union) - https://www.aclu.org/
+		Dance Free - https://dancesafe.org/donate/
+		The Drug Policy Alliance - https://drugpolicy.org
+		The Free Software Foundation - https://my.fsf.org/donate
+		Stop the Drug War - https://stopthedrugwar.org
+		Winchester Unitarian Society – https://www.winchesteruu.org/
+		</h2>
+		<h1 style="text-align:center;"> Your thoughts and prayers are always very much appreciated! </h1>
+	</div>
 </body>
 </html>
