--- a/index.html
+++ b/index.html
@@ -95,7 +95,12 @@
 			Winchester Unitarian Society<br>
 			</a>
 		</h2>
-		<h1 style="text-align:center;"> Your thoughts and prayers are always very much appreciated! </h1>
+		<h1 style="text-align:center;"> Your thoughts and prayers are always very much appreciated!<br>
+		</h1>
+		<h2 style="text-align:center;">	
+			<a href="mailto:shepard.patty@gmail.com">If you have any questions or comments please click here to email us.
+			</a>
+		</h2>
 	</div>
 </body>
 </html>
