--- a/index.html
+++ b/index.html
@@ -25,20 +25,31 @@
 	<h2 style="text-align:center;"> August 30, 1987 to July 7, 2023</h2>
 	<div class="centertxt">
 		<h1 style="text-align:center;"> 
-		A service in celebration of the life of Ian S. Denhardt will be held in person<br>
+		A service in celebration of the life of Ian S. Denhardt was held in person<br>
 		at the Winchester Unitarian Society, 478 Main St., Winchester, MA 01890<br>at 2 PM on Saturday, October 21, 2023.  
 		</h1>
 		<h1 style="text-align:center;">
-			<a href="https://r20.rs6.net/tn.jsp?f=001I5BMKjtfmO-a2UR9VIxEHSdcjmqtGr2twNecn02cOv9ZHgkYZBUI79kr9NwDPfB-GNyJKO5hba5aqTTMTwXJU2q0Ud9Dl0YWCS4wQQ_WCmf7_0iFEvcOy7qulD3i71vlS9Iq1X8W4SnAbOuF3iyLZsQr__Gv4vsc&c=STEboXWiuGha8hp8I-ArOXMyKwxrLHMJPd2RcnwrCtaaC3wT3NI-LA==&ch=01bKtz-oXXVHbIgj31jO6Pq0a1pv2qd9e9PE2fgJq-KFKmMkTnrHxQ==">
-			The service will be live streamed here.
+			<a href="https://venue.streamspot.com/video/2366d1afff">
+			A recording of the service can be viewed here.
 			</a>
 		</h1>
 		<h1 style="text-align:center;">
-			<a href="https://docs.google.com/forms/d/e/1FAIpQLScNzImyTypQHbhMvbB5qZb2UoWqV0V8k0SDmXhkUWeR8SlZzA/viewform?usp=sf_link">
-			If you are planning to attend in person please RSVP before 10/19 here.<br><br>
+			<a href="mailto:shepard.patty@gmail.com">If you would like to offer a memory of Ian for this memorial page, please click here to email us. 
 			</a>
 		</h1>
-		  
+		<h1 style="text-align:center;">Remembrances From Friends
+		</h1>
+		<h2 style="text-align:center;">The days I spent with Ian were some of the most wonderful times I have experienced. The joy, exploration, and imagination of those many hours playing together form an unbroken string that I will always cherish. Ian was one of my first true friends. 
+</h1>  
+		<h2 style="text-align:center;">I knew Ian from the Computer Science PhD program at Boston University. Less than a week after I arrived in Boston, I was talking about distributed systems with fellow students in front of the WTBU radio building, and that's where I first met Ian. We both connected over our love of obscure operating systems. I grew up in Malaysia where I didn't know anyone who appreciated this sort of thing, and I was overjoyed that I had finally met a friend whom I could talk to about things I was truly passionate about. Ian turned out to be renting the same apartment block as I was, and over the months I spent in Boston we became good friends and had many good times. Our adventures together in Boston were the best memories I had in my life, and probably the best I'll ever have: going to a musical about Ada Lovelace, visiting the science museum, trying to find great Indian food in town, going to a theatre screening of the 50th anniversary of Doctor Who, and many more.  Ian was one of the smartest people I've ever known, and I learned a lot from him. He was also empathetic and kind, a good listener, and always ready to help out a friend. I will miss him dearly. 
+</h1>
+		<h2 style="text-align:center;">I deeply appreciated the care and professionalism that Ian always applied to his work. I've worked with a large number of freelance developers, and I can honestly say Ian was the most professional I have had the joy of working with. His work was always on time, clearly organized and frankly, brilliant. Our work was often very theoretical, and Ian's wit and intellect shone through in the frequent and sometimes heated technical discussions of our team.  
+</h1>
+		<h2 style="text-align:center;">I was moved by the reading of Ian's senior statement in the service today. Ian's work for my company literally allowed us to keep the company running more than once, because he delivered on his promises. It may have seemed a small thing, but it had an enormous impact on me, the company, and all our employees.  
+</h1>  
+	</h1>
+		<h1 style="text-align:center;">Ian's Story
+		</h1>
 		<h2 style="text-align:center;"> Ian S. Denhardt, the first child of Patricia Shepard, a clinical social worker and Ronald C. Denhardt, an energy consultant, was born and raised in Winchester MA. His education in the public schools, included an extra year at the kindergarten level and two years at Dearborn Academy in Arlington, from     2000-2002, where he earned an award for “outstanding achievement in academics and social skills.” At Winchester High School he received an award for outstanding scholarship in German and became a member of the National Honor Society before graduating in 2006. 
 		<br><br>He finished a BA at Clark University in 2011, where he received an award for Outstanding Achievement in Computer Science. He spent one year in the PhD Program at BU but subsequently enjoyed work as a private tutor in computer science, including some volunteering in historically marginalized communities, continuing with paid work in a lab devoted to building an open source cloud, and working free-lance as a programmer. <br><br>His love of open source software began at an early age and he continued to do what he could to support that community for many years. Some of his contributions are posted here:<br>
 </h1>
